--- a/src/app/blog/[slug]/blog.module.scss
+++ b/src/app/blog/[slug]/blog.module.scss
@@ -341,6 +341,10 @@
   align-items: center;
 }
 
+.blogGrid > :last-child {
+  padding-top: 80px;
+}
+
 @media (min-width: 1025px) {
   .blogContainer {
     padding-top: 80px;
@@ -349,13 +353,19 @@
 
 @media (max-width: 1024px) and (min-width: 769px) {
   .blogGrid {
-    display: block;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
   }
 
   .breadcrumb {
     margin-bottom: 24px;
     padding-bottom: 20px;
+    order: 1;
+  }
+
+  .mainContent {
+    order: 2;
   }
 
   .socialStats {
@@ -369,9 +379,14 @@
     padding: 4px 7px;
   }
 
+  .blogGrid > :last-child {
+    order: 3;
+  }
+
   .sidebar {
     margin-top: 32px;
     gap: 24px;
+    order: 4;
   }
 
   .sidebarCard {
@@ -390,7 +405,8 @@
 
 @media (max-width: 768px) {
   .blogGrid {
-    display: block;
+    display: flex;
+    flex-direction: column;
     padding: 16px;
     max-width: none;
   }
@@ -400,10 +416,15 @@
     padding-bottom: 12px;
     font-size: 12px;
     flex-wrap: wrap;
+    order: 1;
   }
 
   .breadcrumbCurrent {
     max-width: 150px;
+  }
+
+  .mainContent {
+    order: 2;
   }
 
   .viewCount {
@@ -454,9 +475,14 @@
     height: 16px;
   }
 
+  .blogGrid > :last-child {
+    order: 3;
+  }
+
   .sidebar {
     margin-top: 32px;
     gap: 20px;
+    order: 4;
   }
 
   .sidebarCard {
