fixing production mistakes

--- a/src/app/components/Discover/discover.module.scss
+++ b/src/app/components/Discover/discover.module.scss
@@ -435,6 +435,9 @@
   .thumbLink img {
     height: 140px;
   }
+  .dateBelowDesktop {
+    display: none;
+  }
 
   .discover_brand_text {
     font-size: 28px;
